--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,20 @@
 .racing-track {
   width: 100%;
-  height: 600px; /* Adjust the height as needed */
-  background-color: #333; /* Set the desired background color */
+  height: 200px;
+  background-color: #3f51b5;
   position: relative;
 }
+
+.player {
+  width: 50px;
+  height: 50px;
+  background-color: red;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  transition: left 0.1s ease-in-out;
+}
+
 
 .racing-track .road {
   width: 80%; /* Adjust the width as needed */
